[package]
name = "DualCube"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = 3
strip = "debuginfo"

[profile.dev]
codegen-units = 256
debug = 0
incremental = true
lto = false
opt-level = 0
strip = "debuginfo"

[lints.clippy]
all = { level = "warn", priority = 1 }
pedantic = { level = "warn", priority = 2 }
nursery = { level = "warn", priority = 3 }
cargo = { level = "warn", priority = 4 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[dependencies]
# replaces douconel:
# mehsh = { path = "../mehsh", features = ["bevy", "obj", "stl", "petgraph"] }

colors = { git = "https://github.com/maximsnoep/colors" }
fatgraph = { git = "https://github.com/maximsnoep/fatgraph" }
mehsh = { git = "https://github.com/maximsnoep/mehsh", features = ["bevy", "obj", "stl", "petgraph"] }
hutspot = { git = "https://github.com/maximsnoep/hutspot" }

bevy = "0.16.1"
bevy_egui = "0.34.1"
smooth-bevy-cameras = "0.14.0"

rfd = "0.15.3"
rayon = "1.8.1"
itertools = "0.14.0"

serde = { version = "1.0.219", features = ["rc", "derive"] }
serde_json = "1.0.137"
petgraph = { version = "0.8.2", features = ["rayon", "serde-1"] }
slotmap = { version = "1.0.7", features = ["serde"] }


ordered-float = { version = "5.0.0", features = ["serde"]}
bimap = "0.6.3"
log = "0.4.27"
rand = "0.9.1"
tico = "2.0.0"
winit = "0.30.11"
image = "0.25.6"
priority-queue = "=2.3.1"
enum-iterator = "2.1.0"
ahash = "0.8.12"
ryu = "1.0.19"
nalgebra = "0.33.2"
faer = "0.22.6"
faer_gmres = "0.3.1"

